--- a/Patagames.Pdf.dll/Others/Patagames.Pdf.Properties.Error.resx
+++ b/Patagames.Pdf.dll/Others/Patagames.Pdf.Properties.Error.resx
@@ -334,4 +334,7 @@ To use latest version of SDK, you must pass the renewed key obtained during rene
   <data name="err0066" xml:space="preserve">
     <value>The underlying Dictionary/Stream is not in the correct format.</value>
   </data>
+  <data name="err0067" xml:space="preserve">
+    <value>The specified {0} is already in use by another {1}.</value>
+  </data>
 </root>
