--- a/Patagames.Pdf.dll/Patagames.Pdf.Properties.Resources.resx
+++ b/Patagames.Pdf.dll/Patagames.Pdf.Properties.Resources.resx
@@ -117,6 +117,45 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Metadata" xml:space="preserve">
+    <value>&lt;?xpacket begin='ï»¿' id='W5M0MpCehiHzreSzNTczkc9d'?&gt;
+&lt;x:xmpmeta xmlns:x='adobe:ns:meta/' x:xmptk='Image::ExifTool 12.76'&gt;
+&lt;rdf:RDF xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns#'&gt;
+
+ &lt;rdf:Description rdf:about='' xmlns:dc='http://purl.org/dc/elements/1.1/'&gt;
+  &lt;dc:description&gt;
+   &lt;rdf:Alt&gt;
+    &lt;rdf:li xml:lang='x-default'&gt;{0}&lt;/rdf:li&gt;
+   &lt;/rdf:Alt&gt;
+  &lt;/dc:description&gt;
+  &lt;dc:title&gt;
+   &lt;rdf:Alt&gt;
+    &lt;rdf:li xml:lang='x-default'&gt;{1}&lt;/rdf:li&gt;
+   &lt;/rdf:Alt&gt;
+  &lt;/dc:title&gt;
+  &lt;dc:creator&gt;&lt;rdf:Seq&gt;&lt;rdf:li&gt;{2}&lt;/rdf:li&gt; &lt;/rdf:Seq&gt;&lt;/dc:creator&gt;
+ &lt;/rdf:Description&gt;
+
+ &lt;rdf:Description rdf:about='' xmlns:pdf='http://ns.adobe.com/pdf/1.3/'&gt;
+  &lt;pdf:Keywords&gt;{3}&lt;/pdf:Keywords&gt;
+  &lt;pdf:Producer&gt;{4}&lt;/pdf:Producer&gt;
+ &lt;/rdf:Description&gt;
+
+ &lt;rdf:Description rdf:about='' xmlns:xmp='http://ns.adobe.com/xap/1.0/'&gt;
+  &lt;xmp:CreatorTool&gt;{5}&lt;/xmp:CreatorTool&gt;
+  &lt;xmp:CreateDate&gt;{6}&lt;/xmp:CreateDate&gt;
+  &lt;xmp:ModifyDate&gt;{7}&lt;/xmp:ModifyDate&gt;
+ &lt;/rdf:Description&gt;
+
+ &lt;rdf:Description rdf:about='' xmlns:pdfaid='http://www.aiim.org/pdfa/ns/id/'&gt;
+  &lt;pdfaid:part&gt;{8}&lt;/pdfaid:part&gt;
+  &lt;pdfaid:conformance&gt;{9}&lt;/pdfaid:conformance&gt;
+ &lt;/rdf:Description&gt;
+
+&lt;/rdf:RDF&gt;
+&lt;/x:xmpmeta&gt;
+&lt;?xpacket end='w'?&gt;</value>
+  </data>
   <data name="RuberStampApproved" xml:space="preserve">
     <value>Approved</value>
   </data>
